[gd_scene load_steps=10 format=2]

[ext_resource path="res://Src/Interface/Main.gd" type="Script" id=1]
[ext_resource path="res://Src/Interface/PlayerUI/Interface.gd" type="Script" id=2]
[ext_resource path="res://Src/Actors/Mitch/Mitch.tscn" type="PackedScene" id=3]
[ext_resource path="res://Src/Interface/PlayerUI/Interface.tscn" type="PackedScene" id=4]
[ext_resource path="res://Src/Actors/Player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Src/Interface/OnHitCamera.tscn" type="PackedScene" id=6]
[ext_resource path="res://Src/objects/BattleArea/BattleSquare.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Sound/MitchSoundTrack.ogg" type="AudioStream" id=8]
[ext_resource path="res://Src/objects/BattleArea/BattleSquare.gd" type="Script" id=9]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -31.0
margin_top = -16.0
margin_right = 34.0
margin_bottom = 27.0
color = Color( 0.0235294, 0.00392157, 0.00392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mitch" parent="." groups=[
"environment",
] instance=ExtResource( 3 )]
position = Vector2( 520, 184 )

[node name="BattleSquare" parent="." groups=[
"defense",
"environment",
] instance=ExtResource( 7 )]
position = Vector2( 528, 448 )
script = ExtResource( 9 )

[node name="Player" parent="." groups=[
"defense",
] instance=ExtResource( 5 )]
position = Vector2( 528, 432 )

[node name="OnHitCamera" parent="." groups=[
"environment",
] instance=ExtResource( 6 )]
trauma = 1.0

[node name="HitTimer" type="Timer" parent="." groups=[
"environment",
]]
wait_time = 0.5

[node name="Interface" parent="." groups=[
"environment",
] instance=ExtResource( 4 )]
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
[connection signal="player_health_change" from="." to="Interface" method="_on_player_health_changed"]
[connection signal="dead" from="Player" to="." method="_on_Player_dead"]
[connection signal="player_hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
